[package]
name = "jscore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.404.0"
ewwii_plugin_api = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["time", "sync", "rt", "rt-multi-thread"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
anyhow = "1.0.102"
